<resources>
    <string name="app_name" translatable="false">IsThisEnough</string>

    <string name="new_entry">New Entry</string>
    <string name="history">History</string>
    <string name="info">Info</string>
    <string name="back_button">Back to main</string>
    <string name="input_info">Input todays working hours below. Today is :</string>
    <string name="hours_hint">Hours</string>
    <string name="minutes_hint">Minutes</string>
    <string name="spinner_select">Select job to assingn hours to (optinal)</string>
    <string name="jobdesc_hint">Job description (optinal)</string>
    <string name="save_button">Save</string>
    <string name="info_text">"ITE, Is This Enough (can I go home now?) is a small worktime tracker. Functionality include adding and viewing working hours to three different job titles. User can also add descriptions to mark hours. "</string>
    <string name="info_maker">Software done as part of Tampere university of applied sciences mobile programming 1 cource (2020). Developed by Tero Taipalus.</string>
    <string name="info_uses">"Software uses Butter Knife component, Copyright 2013 Jake Wharton , Apache License, Version 2.0 "</string>
    <string name="toast_hours">Hours are wrong. Has to be between 0-23</string>
    <string name="toast_minutes">Minutes wrong. Has to be between 0-59.</string>
    <string name="toast_empty">Hours and minutes are mandatory.</string>
    <string name="toast_1save">" hours and "</string>
    <string name="toast_2save">" minutes saved! \\n"</string>
    <string name="toast_3save">"for "</string>
    <string name="input_nojob">Job no specified</string>
    <string name="input_job1">Job 1</string>
    <string name="input_job2">Job 2</string>
    <string name="input_job3">Job 3</string>
    <string name="history_info">Your hour history:</string>
</resources>
