<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <Button
        android:id="@+id/toMainFromInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button">
    </Button>

    <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#222222">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hours_hint"
            android:id="@+id/hours"
            android:inputType="number"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/minutes"
            android:hint="@string/minutes_hint"
            android:inputType="number"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:hint="@string/jobdesc_hint"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/saveHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button">
    </Button>

</LinearLayout>