<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10sp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/toInputFromMain"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:text="@string/new_entry"
                android:layout_gravity="center"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/toHistoryFromMain"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_gravity="center"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/toInfoFromMain"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_gravity="center"
                android:textSize="50sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>